maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:29: error: expected class or object definition
def vaAuNord(){
^IslandMaze:34: error: Unmatched closing brace '}' ignored here
}
^